<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:id="@+id/image"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:adjustViewBounds="true"
        android:contentDescription="@string/image_description"
        android:src="@color/accent"/>

    <com.eugene.fithealthmaingit.Custom.TextViewFont
        android:id="@+id/txtName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/image"
        android:layout_marginBottom="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="-40dp"
        android:text="Testings"
        android:textColor="@color/white"
        android:textSize="16sp"
        app:fontName="Roboto-Regular.ttf"/>

    <com.eugene.fithealthmaingit.Custom.TextViewFont
        android:id="@+id/fit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingLeft="16dp"
        android:paddingRight="16dp"
        android:paddingTop="40dp"
        android:text="@string/fit"
        android:textColor="@color/white"
        android:textSize="20sp"
        app:fontName="Roboto-Light.ttf"/>

    <com.eugene.fithealthmaingit.Custom.TextViewFont
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/fit"
        android:layout_marginTop="-6dp"
        android:paddingLeft="16dp"
        android:paddingRight="16dp"
        android:text="@string/health"
        android:textColor="@color/white"
        android:textSize="20sp"
        app:fontName="Roboto-Bold.ttf"/>
</RelativeLayout>
