<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="300dp"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:clickable="true">

    <ImageView
        android:id="@+id/image"
        android:layout_width="match_parent"
        android:layout_height="150dp"
        android:adjustViewBounds="true"
        android:contentDescription="@string/image_description"
        android:src="@color/primary_dark"/>

    <TextView
        android:id="@+id/txtName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/listNaviationDrawer"
        android:layout_marginBottom="16dp"
        android:layout_marginLeft="16dp"
        android:textColor="@color/white"
        android:textSize="14sp"
        android:textStyle="bold"/>


    <TextView
        android:id="@+id/fit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingLeft="16dp"
        android:paddingRight="16dp"
        android:paddingTop="16dp"
        android:text="@string/fit"
        android:textColor="@color/white"
        android:textSize="16sp"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/fit"
        android:layout_marginTop="-2dp"
        android:paddingLeft="16dp"
        android:paddingRight="16dp"
        android:text="@string/health"
        android:textColor="@color/white"
        android:textSize="16sp"
        android:textStyle="bold"/>

    <ListView
        android:id="@+id/listNaviationDrawer"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/image"
        android:layout_marginTop="8dp"
        android:background="@android:color/white"
        android:choiceMode="singleChoice"
        android:divider="@android:color/transparent"/>

    <View
        android:id="@+id/divider"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_below="@+id/listNaviationDrawer"
        android:layout_marginBottom="8dp"
        android:background="@color/base_background"/>


    <RelativeLayout
        android:id="@+id/btnSettings"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_below="@+id/divider"
        android:background="?android:attr/selectableItemBackground"
        android:clickable="true">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_centerVertical="true"
            android:layout_marginLeft="16dp"
            android:contentDescription="@string/image_description"
            android:src="@mipmap/ic_settings"
            android:tint="@color/text_color"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:layout_centerVertical="true"
            android:gravity="center_vertical"
            android:paddingLeft="72dp"
            android:paddingRight="0dp"
            android:text="@string/settings"
            android:textColor="@color/text_color"
            android:textSize="14sp"/>

    </RelativeLayout>
</RelativeLayout>