<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/primary"
        android:minHeight="56dp"
        app:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"/>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/toolbar">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">


                <RadioGroup
                    android:id="@+id/rgSex"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="16dp"
                    android:layout_marginTop="16dp">

                    <RadioButton
                        android:id="@+id/rbFemale"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:checked="true"
                        android:text="@string/person_female"/>

                    <RadioButton
                        android:id="@+id/rbMale"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/person_male"/>
                </RadioGroup>

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <com.rengwuxian.materialedittext.MaterialEditText
                        android:id="@+id/name"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="16dp"
                        android:layout_marginRight="16dp"
                        android:hint="@string/person_name"
                        android:imeOptions="actionNext"
                        android:inputType="textCapWords"
                        app:floatingLabel="normal"/>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_below="@+id/name"
                        android:orientation="horizontal"
                        android:paddingLeft="16dp"
                        android:paddingRight="16dp">

                        <com.rengwuxian.materialedittext.MaterialEditText
                            android:id="@+id/npAge"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:hint="@string/person_age"
                            android:imeOptions="actionNext"
                            android:inputType="number"

                            app:floatingLabel="normal"/>

                        <com.rengwuxian.materialedittext.MaterialEditText
                            android:id="@+id/etWeight"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_marginLeft="16dp"
                            android:layout_marginRight="16dp"
                            android:layout_weight="1"
                            android:hint="@string/person_weight"
                            android:imeOptions="actionNext"
                            android:inputType="number"

                            app:floatingLabel="normal"/>

                        <com.rengwuxian.materialedittext.MaterialEditText
                            android:id="@+id/etGoal"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:hint="@string/person_goal"
                            android:imeOptions="actionNext"
                            android:inputType="number"

                            app:floatingLabel="normal"/>
                    </LinearLayout>
                </RelativeLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="16dp"
                    android:layout_marginRight="160dp"
                    android:layout_marginTop="16dp"
                    android:orientation="horizontal">

                    <com.rengwuxian.materialedittext.MaterialEditText
                        android:id="@+id/npFeet"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:hint="@string/person_feet"
                        android:imeOptions="actionNext"
                        android:inputType="number"
                        app:floatingLabel="normal"/>

                    <com.rengwuxian.materialedittext.MaterialEditText
                        android:id="@+id/npInches"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="16dp"
                        android:layout_marginRight="16dp"
                        android:layout_weight="1"
                        android:hint="@string/person_inches"
                        android:imeOptions="actionDone"
                        android:inputType="number"
                        app:floatingLabel="normal"/>
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="16dp"
                    android:layout_marginRight="16dp"
                    android:layout_marginTop="16dp"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/tvActivityLevel"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/person_activity"
                        android:textColor="@color/text_color"
                        android:textSize="12sp"/>

                    <Spinner
                        android:id="@+id/spnActivity"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:entries="@array/Activity"/>
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="16dp"
                    android:layout_marginRight="16dp"
                    android:layout_marginTop="16dp"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/person_goal_title"
                        android:textColor="@color/text_color"
                        android:textSize="12sp"/>

                    <Spinner
                        android:id="@+id/weightCurrent"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:entries="@array/weight_loss"/>
                </LinearLayout>

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:layout_marginTop="16dp"
                    android:background="@color/grey_medium"/>

                <RelativeLayout
                    android:id="@+id/fitbit"
                    android:layout_width="wrap_content"
                    android:layout_height="76dp"
                    android:background="?android:attr/selectableItemBackground"
                    android:clickable="true"
                    android:orientation="horizontal">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginLeft="16dp"
                            android:layout_marginTop="16dp"
                            android:text="Connect fitbit"
                            android:textColor="@color/text_color"
                            android:textSize="12sp"/>

                        <ImageView
                            android:layout_width="wrap_content"
                            android:layout_height="24dp"
                            android:layout_marginLeft="16dp"
                            android:adjustViewBounds="true"
                            android:scaleType="centerInside"
                            android:src="@drawable/fitbit_logo_dark_1000px"/>
                    </LinearLayout>

                    <CheckBox
                        android:id="@+id/checkBox"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentRight="true"
                        android:layout_centerVertical="true"
                        android:layout_marginRight="16dp"
                        android:clickable="false"
                        android:focusable="false"
                        android:focusableInTouchMode="false"/>
                </RelativeLayout>
            </LinearLayout>

        </RelativeLayout>
    </ScrollView>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="10dp"
        android:layout_below="@+id/toolbar"
        android:background="@drawable/toolbar_shadow"/>
</RelativeLayout>
